@@ -44,8 +44,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/loads/mgi/littriageload/logs/littriageload.error.shtml">Lit Triage Errors</A> <B>(jeo, neb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_MissingPDFs.sql.rpt">J#'s missing PDF's</A> <B>(jeo)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/WF_SupplementalData.rpt">Supplemental Data Needed</A> <B>(jeo, neb)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/BIB_Covid.rpt">Coronaviruas related references</A> <B>(cjb, csmith)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/BIB_COVRefTagCounts.rpt">COV reference tag count report</A> <B>(cjb, csmith)</B>
 <LI><A HREF="/data/loads/mgi/pdfdownload/logs/noPdfs.log">Missing PDFs from PMC - automated downloads attempted, but could not find a PDF file</A> <B>(jeo, neb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_MissingDOI.sql.rpt">References Missing DOI number</A> <B>(neb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_Duplicates.sql">References with Duplicate Titles</A> <B>(cms)</B>
@@ -171,7 +169,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecimenTypeConflict.rpt">Specimen Type (Hybridization) Conflict</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SeqID.rpt">Probes used in GXD Assay w/ Seq IDs/Seq ID Attached to another Marker</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_Reference.sql.rpt">Probe/Antigen issues</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_NotRouted.rpt">Papers used by GXD that were Not Routed</A>
 <LI><A HREF="/data/reports/qcreports_db/archive/gxd">Archived GXD Reports</A>
 </OL>
 <A NAME="gxdht"><B>GXD HT Experiments (cms)</B></A>
@@ -251,7 +248,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <A NAME="strainsjax"><B>Strains - JAX (honda)</B></A>
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_StrainJAX2.jrs.current.rpt">Public JAX strains/Alleles used in Genotype/No Strain/Genotype Association</A>
-<LI><A HREF="/data/reports/qcreports_db/output/PRB_StrainJAX3.jrs.rpt">JAX Strains w/ Genotype Associations where the Markers/Alleles of the Strain record do not exactly match the Markers/Alleles of the Genotype record</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_StrainJAX4.sql.current.rpt">New JR#s created in the past week</A> <B>(dlb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_StrainJAX5.sql.current.rpt">JR#s with alleles added within the past week</A>
 <LI><A HREF="/data/reports/qcreports_db/archive/strain">Strain Archive</A>
@@ -324,8 +320,8 @@ be used at times to test reports for <I>future</I> public consumption.)
 <A NAME="metrics"><B>Curation Metrics</B></A>
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_CurationMetrics.sql.rpt">J: Numbers Assigned</A> <B>(jfinger)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_CurationMetrics_Index.sql.rpt">GXD Curation - Index</A> <B>(jfinger)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_CurationMetrics_FullCoded.sql.rpt">GXD Curation - Full-coded</A> <B>(jfinger)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_CurationMetrics_Index.sql.rpt">GXD Curation - Index</A> <B>(ringwald)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_CurationMetrics_FullCoded.sql.rpt">GXD Curation - Full-coded</A> <B>(ringwald)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/PHENO_CurationMetrics.sql.rpt">Pheno Curation</A> <B>(mnk)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_JournalByYear.rpt">Lit triage: journals x year of publication</A> <B>(csmith)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_JournalByYearKD.rpt">Lit triage: journals keep/discard numbers</A> <B>(csmith)</B>
