@@ -1,3 +1,12 @@
+TAG: qcreports_db-6-0-26-5
+DATE: 12/16/2025
+STAFF: lec
+wts2-1778/sprt-161/Remove Obsolete Public, QC Reports
+        deleted:    mgd/PRB_StrainJAX3.py
+        deleted:    monthly/GXD_NotRouted.py
+        deleted:    weekly/BIB_COVRefTagCounts.py
+        deleted:    weekly/BIB_Covid.py
+
 TAG: qcreports_db-6-0-26-4
 DATE: 12/12/2025
 STAFF: lec
